# CARD

./: .gitignore  CITATION.bib  CITATION.cff  CONTRIBUTING.md  DATASHEET.md  GENERATOR_COMMITMENT.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
baselines/: README.md  __init__.py  loglog_grid.py  probit_shares.py  probit_simulation.py  run_reference_grid.py
card_metrics/: __init__.py  actual_data.py  cli.py  diagnostics.py  elasticity.py  evaluate_all.py  evaluate_submission.py  headline_decomposition.py  leaderboard.py  validity_checks.py
card_metrics/baselines/: __init__.py  loglog_grid.py  probit_simulation.py  run_reference_grid.py  text_distance.py
causal_demand_metrics/: README.md  __init__.py  headline_decomposition.py  layer1_demand.py  layer2_elasticity.py  layer4_validity.py  sales_forecasting.py
docs/: BASELINES.md  DATA.md  DATASHEET.md  FAQ.md  GENERATOR_COMMITMENT.md  reference_results.html
examples/: 01_explore_data.ipynb  01_quickstart.ipynb  02_endogeneity.ipynb  02_score_a_submission.ipynb  03_endogeneity_and_instruments.ipynb  README.md  download_data.py  quickstart.py
metrics/: README.md  SUBMISSION_FORMAT.md  __init__.py  actual_data.py  diagnostics.py  evaluate_all.py  evaluate_submission.py  leaderboard.py
scripts/: make_leaderboard.py  make_mini_cell.py
submissions/reference_iv_no_text/: entry.md
submissions/reference_iv_text/: entry.md
submissions/reference_no_iv_no_text/: entry.md
tests/: test_actual_data_arm.py  test_dominicks_loader.py  test_evaluate_all.py  test_forecasting_elasticity.py  test_harness.py  test_headline_decomposition.py  test_layer1_layer2.py  test_layer4_validity.py  test_package_purity.py  test_reference_grid.py  test_validity_checks.py
(+1 files in other folders)
